cmake_minimum_required (VERSION 3.8)
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("RestAPI-userauth")
add_executable (RestAPI-userauth "main.cpp" )
find_package(cpprestsdk CONFIG REQUIRED)
target_link_libraries(RestAPI-userauth PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_brotli_internal)
if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET RestAPI-userauth PROPERTY CXX_STANDARD 20)
endif()